--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,6 +16,10 @@ main {
     margin-top: 5px;
 }
 
+.mt-3 {
+    margin-top: 10px;
+}
+
 .mt-5 {
     margin-top: 20px;
 }
@@ -24,8 +28,36 @@ main {
     margin-bottom: 5px;
 }
 
+.mb-3 {
+    margin-bottom: 10px;
+}
+
 .mb-5 {
     margin-bottom: 20px;
+}
+
+.ml-1 {
+    margin-left: 5px;
+}
+
+.ml-3 {
+    margin-left: 10px;
+}
+
+.ml-5 {
+    margin-left: 20px;
+}
+
+.mr-1 {
+    margin-right: 5px;
+}
+
+.mr-3 {
+    margin-right: 10px;
+}
+
+.mr-5 {
+    margin-right: 20px;
 }
 
 .pointer {
