--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -56,10 +56,12 @@
 .journal__entry-picture {
     height: 75px;
     width: 75px;
+    min-width: 25%;
 }
 
 .journal__entry-body {
     padding: 10px;
+    min-width: 42%;
 }
 
 .journal__entry-title {
@@ -79,6 +81,7 @@
     justify-content: center;
     padding: 5px;
     font-size: 16px;
+    min-width: 25%;
 }
 
 .journal__entry-date-box span {
